--- a/src/index.css
+++ b/src/index.css
@@ -117,6 +117,7 @@
   --sidebar-ring: oklch(0.556 0 0);
 }
 
+
 @layer base {
   * {
     @apply border-border outline-ring/50;
@@ -131,4 +132,12 @@
     font-family: 'Altone Trial', sans-serif;
                                                 
   }
+  .hero-section {
+ background-repeat: no-repeat;
+background-attachment: fixed;
+  background-size: cover;
+  width: 100%;
+  margin-top: 6rem;
+}
+
 }
